--- a/Sunset_Knowledge Base/Content/D_Checklist/Checklist for Safety Instructions and Warnings in the User Manual .htm
+++ b/Sunset_Knowledge Base/Content/D_Checklist/Checklist for Safety Instructions and Warnings in the User Manual .htm
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head><title>Checklist for Safety Instructions and Warnings in the Manual</title>
+    <head><title>Checklist for Safety Instructions and Warnings in the User Manual</title>
     </head>
     <body>
         <h1>Checklist for Safety Instructions and Warnings in the Manual</h1>
