--- a/Content/C_Legally Desired Content/Product Safety Instructions and Warnings.htm
+++ b/Content/C_Legally Desired Content/Product Safety Instructions and Warnings.htm
@@ -269,7 +269,7 @@ minor or moderate injury</td>
                                                             <img src="../Resources/Images/ISO warnings.png" />
                                                         </td>
                                                         <td class="BodyA-Column2-Body1" style="text-align: center;">
-                                                            <img src="../_Images/ANSI warnings.png" />
+                                                            <img src="../Resources/Images/ANSI warnings.png" />
                                                         </td>
                                                     </tr>
                                                 </tbody>
